--- a/lib/react-compact-multiselect.scss
+++ b/lib/react-compact-multiselect.scss
@@ -1,2 +1,15 @@
 .react-compact-multiselect {
+
+
+	.drop-trigger {
+
+		padding: 4px;
+		.rcm-selected-count {
+			display: inline;
+			border: 2px solid grey;
+			border-radius: 2px;
+			padding: 0px 3px;
+		}
+	}
+
 }
