style and ui tweaks

--- a/lib/react-compact-multiselect.scss
+++ b/lib/react-compact-multiselect.scss
@@ -12,4 +12,14 @@
 		}
 	}
 
+	.rcm-checklist-items {
+		.rcm-checklist-item {
+			&:hover {
+				background: #bbb;
+				cursor: pointer;
+			}
+		}
+
+	}
+
 }
