ability to group the items in the multi select

--- a/lib/react-compact-multiselect.scss
+++ b/lib/react-compact-multiselect.scss
@@ -18,6 +18,13 @@
 		}
 	}
 
+	.rcm-group-heading {
+		background: #638CA1;
+		color: #F5F5F5;
+		padding: 4px 0px 2px 4px;
+		border-radius: 2px;
+	}
+
 	.rcm-checklist-items {
 		.rcm-checklist-item {
 			&:hover {
