--- a/lib/react-compact-multiselect.scss
+++ b/lib/react-compact-multiselect.scss
@@ -30,15 +30,15 @@
 		&:before {
 			position: absolute;
 			content: " ";
-			width: 120%;
-			height: 120%;
+			width: 124%;
+			height: 124%;
 			background-color: #fff;
 			z-index: -1;
 			padding-right: 1em;
-			top: -10%;
-			left: -10%;
+			top: -12%;
+			left: -18%;
 			border-radius: 1em;
-			box-shadow: 0 0 0 1px rgba(0,0,0,.1);
+			box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
 		}
 		&:after {
 			color: #2d8bee;
@@ -63,6 +63,7 @@
 			font-size: 1em;
 			font-weight: 100;
 			line-height: 1;
+			box-sizing:border-box;
 
 			&::-webkit-input-placeholder {
 			   font-size:.8em;
@@ -87,6 +88,7 @@
 		}
 		.clear-filter {
 			position: absolute;
+			cursor: pointer;
 			top: .5em;
 			right: .5em;
 			padding: .0em .3em .2em;
@@ -126,13 +128,12 @@
 			font-size: 1em;
 			cursor: pointer;
 
-			input {
-				font-size: 1em;
-			}
+			input,
 			label {
 				font-size: 1em;
+				cursor:pointer;
 			}
-
+			
 			&:hover {
 				background: #eaeaea;
 			}
@@ -147,26 +148,26 @@
 		button {
 			@extend .user-select-none;
 			font-size: 1em;
+			line-height: 1em;
 			background-color: #eee;
 			border-radius: 2px;
 			border: 1px solid #ccc;
+			cursor: pointer;
 			color: #555;
 			position: relative;
 			padding: .2em .4em .25em 1em;
 			text-align: center;
 			box-shadow: inset 2px 2px 2px 0px rgba(255,255,255,.7), inset -1px -1px 1px 0 rgba(0,0,0,.1);
 
-			.button-icon {
-				font-size: .9em;
-				padding: 0;
-				float: left;
-				position: absolute;
-				left: 3px;
-				height: 100%;
-				top: 1px;
+			span { //button text
+				font-size:.7em;
+				line-height: 1.7em;
 
-				& + span { //button text
-					font-size:.7em;
+				&:before {
+					content: "\2713 ";
+					position: absolute;
+					text-indent: .46em;
+					left: 0;
 				}
 			}
 
@@ -195,9 +196,12 @@
 			max-width: 96px;
 			min-width: 66px;
 
-			.button-icon {
-				font-size: 1.1em;
-				line-height: .9;
+			span:before {
+				content: "\00d7 ";
+				position: absolute;
+				text-indent: .3em;
+				font-size: 1.3em;
+				margin-top: -.05em;
 			}
 		}
 		
