--- a/lib/react-compact-multiselect.scss
+++ b/lib/react-compact-multiselect.scss
@@ -166,6 +166,13 @@ $dropbox-minheight: $checklist-minheight + (16 * 8.5); //assumes em = 16px, 8.3 
 		text-transform: uppercase;
 	}
 
+	.rcm-group-info {
+		@extend .user-select-none;
+		color: #111;
+		padding: .5em .6em;
+		background-color: #f0f0f0;
+	}
+
 	.rcm-checklist-items {  //child of .rcm-filtered-checklist
 		@extend .clearfix;
 		box-shadow: inset 0 0 9px 0 rgba(0, 0, 0, 0.05), inset 0 1px 1px 0 rgba(0, 0, 0, 0.1), inset 0 -1px 3px 0 rgba(0, 0, 0, 0.1);
