--- a/lib/react-compact-multiselect.scss
+++ b/lib/react-compact-multiselect.scss
@@ -32,19 +32,13 @@ $dropbox-minheight: $checklist-minheight + (16 * 8.5); //assumes em = 16px, 8.3 
 		width:100%;
 		height:100%;
 		display: table;
-		& > div.rcm-filtered-checklist {
-			display: table;
+		& > div.header {display: table-row;height:1px;}
+		& > div.content {
+			overflow:hidden!important;
+			position:relative;
+			display: table-row;
 			height: 100%;
 			width: 100%;
-
-			& > div.header {display: table-row;height:1px;}
-			& > div.content {
-				overflow:hidden!important;
-				position:relative;
-				display: table;
-				height: 100%;
-				width: 100%;
-			}
 		}
 		& > div.footer {display:table-row;height:1px;}
 		.overflow-y {
@@ -110,6 +104,7 @@ $dropbox-minheight: $checklist-minheight + (16 * 8.5); //assumes em = 16px, 8.3 
 			font-size: 1em;
 			font-weight: 100;
 			line-height: 1.6em;
+			min-height:31px;
 			box-sizing:border-box;
 
 			&::-webkit-input-placeholder {
