--- a/lib/react-compact-multiselect.scss
+++ b/lib/react-compact-multiselect.scss
@@ -34,8 +34,6 @@ $dropbox-minheight: $checklist-minheight + (16 * 8.5); //assumes em = 16px, 8.3 
 		display: table;
 		& > div.header {display: table-row;height:1px;}
 		& > div.content {
-			overflow:hidden!important;
-			position:relative;
 			display: table-row;
 			height: 100%;
 			width: 100%;
@@ -44,6 +42,9 @@ $dropbox-minheight: $checklist-minheight + (16 * 8.5); //assumes em = 16px, 8.3 
 		.overflow-y {
 			width: 100%;
 			height: 100%;
+			position: relative;
+			overflow: hidden;
+			display: table-cell;
 		}
 	}
 
@@ -173,7 +174,9 @@ $dropbox-minheight: $checklist-minheight + (16 * 8.5); //assumes em = 16px, 8.3 
 		margin: 0;
 		padding: 0;
 		overflow-y: auto;
-		min-height: 100%;
+		position: absolute;
+    	width: 100%;
+    	height: 100%;
 
 		.rcm-checklist-item {
 			@extend .user-select-none;
